--- a/style.css
+++ b/style.css
@@ -1,38 +1,52 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    
+}
 body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background: linear-gradient(to left, rgb(61, 125, 214), rgb(154, 207, 39), rgb(61, 125, 214));
-    padding: 0;
-    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 header{
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem;
+    background-color: rgb(79, 88, 111);
+    width: 100%;
 }
 
+main {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+
+.cerrar-menu,
+.abrir-menu{
+    display: none;
+}
+.nav-list{
+    display: flex;
+    list-style-type: none;
+    gap: 1rem;
+    margin-left: auto;
+}
+
+.nav-list li a{
+    text-decoration: none;
+    color: black;
+}
 .active{
     background-color: rgb(37, 208, 243);
     text-transform: uppercase;
-}
-
-ul{
-    list-style-type: none;
-    margin: 10px;
-    padding: 10px;
-    overflow:hidden;
-    background-color: #203e15;
-    border-radius: 10px;
-}
-
-li{
-    float: right;
-}
-
-li a{
-    display:block;
-    color: white;
-    text-align: center;
-    padding: 20px;
-    text-decoration:underline;
 }
 
 li a:hover:not(.active){
@@ -47,13 +61,58 @@ h1{
     border-radius: 8px;
 }
 
-footer{
+footer {
     background-color: #333;
     color: white;
-    padding: 15px;
     text-align: center;
-    position: relative;
-    bottom: 0;
-    margin: 10px;
-    border-radius: 10px;
+    padding: 15px;
+    width: 100%;
+    margin-top: auto;
 }
+
+@media screen and (max-width:550px) {
+    .abrir-menu,
+    .cerrar-menu{
+        display: block;
+        width: 64px;
+        height: 64px;
+        border: 1px solid;
+        font-size: 1.25rem;
+        background-color: transparent;
+        cursor: pointer;
+    }
+    .abrir-menu {
+        color: #ececec;
+    }
+
+    .cerrar-menu {
+        color: #ececec;
+    }
+    .nav{
+        background-color: #333;
+        opacity: 0;
+        visibility: hidden;
+        display: flex;
+        gap: 1rem;
+        flex-direction: column;
+        align-items: end;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        padding: 2rem;
+        box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .5);
+    }
+    .nav-visible{
+        opacity: 1;
+        visibility: visible;
+    }
+    .nav-list{
+        flex-direction: column;
+        align-items: end;
+    }
+    .nav-list li a {
+        color: #ecececec;
+    }
+
+} 
